--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,10 @@
 {
   "extends": [
-    "config:base"
-  ]
+    "config:base",
+    ":skipStatusChecks"
+  ],
+  "automerge": true,
+  "major": {
+    "automerge": false
+  }
 }
