--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,7 @@
   "extends": [
     "config:base"
   ],
-  "pinDigests": true,
+  "pinDigests": false,
   "automerge": true,
   "major": {
     "automerge": false
